--- a/main/main_style.css
+++ b/main/main_style.css
@@ -113,11 +113,10 @@ h3 {
   
 
 
-.footer{
-    background-color:#becbff;
-    padding: 10px 0;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    left: 0;
-}
+.footer {
+    margin-top: 50px;
+    padding: 20px;
+    background-color: #314dca;
+    color: white;
+    text-align: center;
+  }
