--- a/image_test/image_style.css
+++ b/image_test/image_style.css
@@ -12,7 +12,13 @@ h2 {
   margin-top: 50px;
   font-size: 50px;
 }
-
+.instructions {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Orbit', cursive;
+}
 
 .file-upload {
   background-color: white;
