--- a/webcam_test/webcam_style.css
+++ b/webcam_test/webcam_style.css
@@ -1,21 +1,16 @@
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-}
-
-h2 {
-  margin-top: 40px;
-  margin-bottom: 20px;
-  font-size: 50px;
+  flex: 1;
 }
 
 .instructions {
   font-size: 1.5em;
   margin-bottom: 20px;
   text-align: center;
+  color: #007bff;
   font-weight: bold;
   font-family: 'Orbit', cursive;
 }
@@ -115,9 +110,6 @@ button:hover {
   font-size: 1.5em;
   margin-top: 20px;
   text-align: center;
-}
-
-#prediction-result-webcam{
   font-family: 'Orbit', cursive;
   font-weight: bold;
 }
